<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:background="@color/ligth_green"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.lfelipeeb.kronaproject.fragment.DesenvolvedoresFragment">


        <TextView
            android:textColor="@color/black"
            android:textStyle="bold"
            android:padding="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center_horizontal"
            android:text="@string/desenvolvedores" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_marginLeft="5dp"
                android:padding="10dp"
                android:src="@drawable/luiz"
                android:layout_width="68dp"
                android:layout_height="68dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:textStyle="italic"
                    android:textColor="@color/black"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/desenvolvedores_luiz" />
                <TextView
                    android:textColor="@color/black"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/desenvolvedores_luiz_descricao" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_marginLeft="5dp"
                android:padding="10dp"
                android:src="@drawable/mauricio"
                android:layout_width="68dp"
                android:layout_height="68dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:textStyle="italic"
                    android:textColor="@color/black"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/desenvolvedores_mauricio" />
                <TextView
                    android:textColor="@color/black"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/desenvolvedores_mauricio_descricao" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_marginLeft="5dp"
                android:padding="10dp"
                android:src="@drawable/luciano"
                android:layout_width="68dp"
                android:layout_height="68dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:textStyle="italic"
                    android:textColor="@color/black"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/desenvolvedores_luciano" />
                <TextView
                    android:textColor="@color/black"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/desenvolvedores_luciano_descricao" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>